<resources>
    <string name="app_name">One-Click Flashlight</string>

    <string name="flashlight_not_found">Unable to find a camera flashlight.</string>

    <string name="channel_name">Flashlight Channel</string>
    <string name="notif_desp">Click here to turn off the flashlight.</string>

    <string name="shortcut_created">Shortcut created</string>

    <string name="settings">Settings</string>

    <string name="settings_toggle_key" translatable="false">key_toggle</string>
    <string name="settings_toggle_title">Flashlight</string>
    <string name="settings_toggle_on">ON</string>
    <string name="settings_toggle_off">OFF</string>

    <string name="settings_category_shortcuts">Shortcuts</string>

    <string name="shortcuts_toggle_key" translatable="false">key_shortcuts_toggle</string>
    <string name="shortcuts_toggle_title">Flashlight</string>
    <string name="shortcuts_toggle_desp">Add One-Click Flashlight shortcut.</string>

    <string name="shortcuts_anti_touch_key" translatable="false">key_shortcuts_anti_touch</string>
    <string name="shortcuts_anti_touch_title">Anti Touch</string>
    <string name="shortcuts_anti_touch_desp">Flashlight + The app will prevent you from touching the screen by showing an overlay.</string>
    <string name="anti_touch_hint">Press the volume down button to close this screen.\nIt won\'t adjust your volume settings.</string>

    <string name="shortcuts_ephemeral_anti_touch_key" translatable="false">key_shortcuts_ephemeral_anti_touch</string>
    <string name="shortcuts_ephemeral_anti_touch_title">Ephemeral Anti Touch</string>
    <string name="shortcuts_ephemeral_anti_touch_desp">Anti Touch + when you turn off the screen, the flashlight will be closed immediately.</string>

    <string name="shortcuts_delayed_anti_touch_key" translatable="false">key_shortcuts_delayed</string>
    <string name="shortcuts_delayed_anti_touch_title">Delayed Anti Touch</string>
    <string name="shortcuts_delayed_anti_touch_desp">Anti Touch + After you turn off the screen, wait several seconds before turning off the flashlight.</string>
    <string name="shortcuts_delayed_anti_touch_delay_input_title">Delay(Seconds)</string>

    <string name="shortcuts_on_off_anti_touch_key" translatable="false">key_shortcuts_on_off</string>
    <string name="shortcuts_on_off_anti_touch_title">On Off Anti Touch</string>
    <string name="shortcuts_on_off_anti_touch_desp">Anti Touch + You can control the flashlight by turning on and off the screen.</string>

    <string name="shortcuts_bright_screen_key" translatable="false">key_shortcuts_bright_screen</string>
    <string name="shortcuts_bright_screen_title">Bright Screen</string>
    <string name="shortcuts_bright_screen_desp">A shortcut that will light your phone screen.</string>

    <string name="shortcuts_flashbang_key" translatable="false">key_shortcuts_flashbang</string>
    <string name="shortcuts_flashbang_title">Flashbang</string>
    <string name="shortcuts_flashbang_desp">Flashlight + Bright Screen</string>

    <string name="shortcuts_floating_window_key" translatable="false">key_shortcuts_floating_window</string>
    <string name="shortcuts_floating_window_title">Floating Window</string>
    <string name="shortcuts_floating_window_desp">A floating button to control the flashlight.</string>
    <string name="shortcuts_floating_window_turn_on_the_flashlight_key" translatable="false">key_shortcuts_floating_window_turn_on_the_flashlight</string>
    <string name="shortcuts_floating_window_turn_on_the_flashlight_title">Turn on the flashlight</string>
    <string name="shortcuts_floating_window_turn_on_the_flashlight_desp">When opening the floating window, turn on the flashlight</string>
    <string name="shortcuts_floating_window_close_with_the_flashlight_key" translatable="false">key_shortcuts_floating_window_close_with_the_flashlight</string>
    <string name="shortcuts_floating_window_close_with_the_flashlight_title">Close with the flashlight</string>
    <string name="shortcuts_floating_window_close_with_the_flashlight_desp">Close the floating window and the flashlight at the same time</string>
    <string name="floating_window_service_title">One-Click Flashlight Floating Window</string>
    <string name="floating_window_service_desp">Click here to close the floating window.</string>

    <string name="about">About</string>

    <string name="feedback">Feedback</string>
    <string name="source_code">Source Code</string>
    <string name="license">License</string>
    <string name="license_content" translatable="false">Apache License 2.0</string>

</resources>
