<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_logo"
        app:key="@string/settings_toggle_key"
        app:persistent="false"
        app:summaryOff="@string/settings_toggle_off"
        app:summaryOn="@string/settings_toggle_on"
        app:title="@string/settings_toggle_title" />

    <PreferenceCategory app:title="@string/settings_category_shortcuts">

        <Preference
            app:icon="@drawable/settings_flashlight"
            app:key="@string/shortcuts_toggle_key"
            app:summary="@string/shortcuts_toggle_desp"
            app:title="@string/shortcuts_toggle_title" />

        <Preference
            app:icon="@drawable/settings_anti_touch"
            app:key="@string/shortcuts_anti_touch_key"
            app:summary="@string/shortcuts_anti_touch_desp"
            app:title="@string/shortcuts_anti_touch_title" />

        <Preference
            app:icon="@drawable/settings_ephemeral_anti_touch"
            app:key="@string/shortcuts_ephemeral_anti_touch_key"
            app:summary="@string/shortcuts_ephemeral_anti_touch_desp"
            app:title="@string/shortcuts_ephemeral_anti_touch_title" />

        <Preference
            app:icon="@drawable/settings_on_off_anti_touch"
            app:key="@string/shortcuts_on_off_anti_touch_key"
            app:summary="@string/shortcuts_on_off_anti_touch_desp"
            app:title="@string/shortcuts_on_off_anti_touch_title" />

        <Preference
            app:icon="@drawable/settings_bright_screen"
            app:key="@string/shortcuts_bright_screen_key"
            app:summary="@string/shortcuts_bright_screen_desp"
            app:title="@string/shortcuts_bright_screen_title" />

        <Preference
            app:icon="@drawable/settings_flashbang"
            app:key="@string/shortcuts_flashbang_key"
            app:summary="@string/shortcuts_flashbang_desp"
            app:title="@string/shortcuts_flashbang_title" />

        <Preference
            app:icon="@drawable/settings_floating_window"
            app:key="@string/shortcuts_floating_window_key"
            app:summary="@string/shortcuts_floating_window_desp"
            app:title="@string/shortcuts_floating_window_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:icon="@drawable/settings_feedback"
            app:title="@string/feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/DeweyReed/OneClickFlashlight/issues" />
        </Preference>

        <Preference
            app:icon="@drawable/settings_code"
            app:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/DeweyReed/OneClickFlashlight" />
        </Preference>

        <Preference
            app:summary="@string/license_content"
            app:title="@string/license">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/DeweyReed/OneClickFlashlight/blob/master/LICENSE" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
