<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTurnOnTheFlashlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/textTurnOnTheFlashlightTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/shortcuts_floating_window_turn_on_the_flashlight_title"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@id/switchTurnOnTheFlashlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shortcuts_floating_window_turn_on_the_flashlight_desp"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textTurnOnTheFlashlightTitle"
            app:layout_constraintStart_toStartOf="@id/textTurnOnTheFlashlightTitle"
            app:layout_constraintTop_toBottomOf="@id/textTurnOnTheFlashlightTitle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTurnOnTheFlashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCloseWithTheFlashlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/textCloseWithTheFlashlightTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/shortcuts_floating_window_close_with_the_flashlight_title"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@id/switchCloseWithTheFlashlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shortcuts_floating_window_close_with_the_flashlight_desp"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textCloseWithTheFlashlightTitle"
            app:layout_constraintStart_toStartOf="@id/textCloseWithTheFlashlightTitle"
            app:layout_constraintTop_toBottomOf="@id/textCloseWithTheFlashlightTitle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchCloseWithTheFlashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
